# eval-ai-ci-gate

./: .gitignore  Makefile  README.md  action.yml  eval-gates.yaml  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
baseline/: scorecard.json
docs/implementation/: agent-assignments.md  architecture.md  design.md  implementation-plan.md  requirements.md  research.md  scorecard-contract.md  validation-plan.md  validation-report.md
docs/prompts/: developer.md  reviewer.md  team-lead.md  tester.md
examples/: consumer-workflow.yml  eval-gates.yaml
gate/: __init__.py  cli.py  config.py  decide.py  history.py  notify.py  regression.py  report.py  schema.py  thresholds.py
tests/: test_cli.py  test_config.py  test_decide.py  test_history.py  test_notify.py  test_regression.py  test_report.py  test_schema.py  test_smoke.py  test_thresholds.py
tests/fixtures/: baseline.json  eval-gates.yaml  fail.json  incomplete.json  no_metric_summary.json  pass.json  regressed.json
