[project]
name = "eval-ai-ci-gate"
version = "0.1.0"
description = "Reusable CI release gate for GenAI eval harnesses — config-driven hard thresholds, regression-vs-baseline detection, HTML report, and Slack/PR-comment surfacing."
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "jinja2",
]

# Notifiers (Slack webhook + GitHub PR comment) are the only network path. Kept
# out of the base deps so the offline core (threshold check + regression diff +
# report render) installs light and never relies on a transitive `requests`.
# Install with: uv sync --extra notify
[project.optional-dependencies]
notify = [
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-pyyaml",
    # Present in dev so the mocked notifier unit tests can import them.
    "requests",
    "types-requests",
]

[project.scripts]
run-gate = "gate.cli:run_gate_main"
accept-baseline = "gate.cli:accept_baseline_main"
validate-scorecard = "gate.cli:validate_scorecard_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
